# mersenne_primality

./: .gitignore  CMakeLists.txt  COPYING.txt  README.txt
src/: karatsuba.h  main.cpp  modulo_mersenne.h  number.h  primetest.h
